...
            TopAppBar(
                title = { Text(text = stringResource(id = R.string.signup)) },
                navigationIcon = {
                    IconButton(onClick = { onGoBack() }) {
                        Icon(
                            imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                            contentDescription = "Back button"
                        )
                    }
                }
            )
        }
    ) { paddingValues ->
...
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Email
                ),
                singleLine = true,
                modifier = modifier
                    .padding(bottom = 8.dp)
                    .testTag("Signup email TF")
            )

            OutlinedTextField(
                value = password,
                onValueChange = { onPasswordChange(it) },
                label = { Text(text = stringResource(id = R.string.password)) },
...
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Password
                ),
                singleLine = true,
                modifier = modifier
                    .padding(bottom = 8.dp)
                    .testTag("Signup password TF")
            )

            OutlinedTextField(
                value = confirmPassword,
                onValueChange = { onConfirmPasswordChange(it) },
                label = { Text(text = stringResource(id = R.string.confirm_password)) },
...
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Password
                ),
                singleLine = true,
                modifier = modifier
                    .padding(bottom = 8.dp)
                    .testTag("Signup confirm password TF")
            )

            OutlinedTextField(
                value = name,
                onValueChange = { onNameChange(it) },
                label = { Text(text = stringResource(id = R.string.name)) },
...
                        Text(text = nameError)
                    } },
                isError = nameError != null,
                singleLine = true,
                modifier = modifier
                    .padding(bottom = 16.dp)
                    .testTag("Signup name TF")
            )

            Button(
                modifier = modifier.testTag("Signup button"),
                onClick = { onSignup() }
            ) {
                Text(text =stringResource(id = R.string.signup))
            }
        }
    }
...
